Fixes hire-us page on safari; Removes max-width from team grid in favor of horizontalGrid--limited

--- a/source/stylesheets/components/_hire_us_grid.scss
+++ b/source/stylesheets/components/_hire_us_grid.scss
@@ -19,11 +19,8 @@
   display: flex;
   flex-direction: column;
 
-  max-width: $Theme-grid-maxWidth;
   padding-left: $Theme-spacing-small;
   padding-right: $Theme-spacing-small;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 .HireUsGrid-greetings {
