--- a/source/stylesheets/components/_team_grid.scss
+++ b/source/stylesheets/components/_team_grid.scss
@@ -38,9 +38,6 @@ $susy: (
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
-  max-width: $Theme-grid-maxWidth;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 .TeamGrid-cell {
